--- a/src/components/SongList.css
+++ b/src/components/SongList.css
@@ -12,8 +12,9 @@
     text-align: center;
     gap: 0.5rem;
     padding: 0.5rem;
-    background-color: #e6e6e6;
+    background-color: #727272;
     border-radius: 0.5rem;
+    box-shadow: 4px 4px 50px 0px #121212;
 }
   
 .song-list-item img {
@@ -26,6 +27,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr;
     align-items: center;
+    text-align: center;
     padding: 0.5rem;
     font-weight: bold;
 }
@@ -61,4 +63,3 @@
         display: none;
     }
 }
-  
