Adds css to remove buttons and adds refresh tracks button.

--- a/src/components/TrackList.css
+++ b/src/components/TrackList.css
@@ -7,7 +7,7 @@
 
 .track-list-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr 1fr;
     align-items: center;
     text-align: center;
     gap: 0.5rem;
@@ -25,7 +25,7 @@
   
 .track-list-header {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr 1fr;
     align-items: center;
     text-align: center;
     padding: 0.5rem;
@@ -62,4 +62,19 @@
     .track-list-header {
         display: none;
     }
+}
+
+.remove-button {
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem 0.5rem;
+    border-radius: 0.5rem;
+    background-color: #1db954;
+    transition: background-color 0.3s ease;
+    font-size: inherit;
+    border: none;
+}
+
+.remove-button:hover {
+    background-color: #1ed760;
 }
