--- a/src/components/TrackList.css
+++ b/src/components/TrackList.css
@@ -7,7 +7,7 @@
 
 .track-list-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr 0.5fr 0.5fr;
     align-items: center;
     text-align: center;
     gap: 0.5rem;
@@ -25,7 +25,7 @@
   
 .track-list-header {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr 2fr 2fr 1fr 0.5fr 0.5fr;
     align-items: center;
     text-align: center;
     padding: 0.5rem;
@@ -64,7 +64,7 @@
     }
 }
 
-.remove-button {
+.remove-button, .pin-button {
     color: white;
     text-decoration: none;
     padding: 0.5rem 0.5rem;
@@ -75,6 +75,6 @@
     border: none;
 }
 
-.remove-button:hover {
+.remove-button:hover, .pin-button:hover {
     background-color: #1ed760;
 }
